<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/basketBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F1743B"
        android:contentDescription="@string/basket"
        app:layout_constraintBottom_toTopOf="@+id/cheese_btn"
        app:layout_constraintStart_toStartOf="@+id/cheese_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basket" />

    <Button
        android:id="@+id/cheese_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="22dp"
        android:text="@string/cheese"
        app:layout_constraintBottom_toTopOf="@+id/cheese_chicken_btn"
        app:layout_constraintEnd_toStartOf="@+id/fch_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketBtn" />

    <Button
        android:id="@+id/cheese_chicken_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cheese_chicken"
        app:layout_constraintBottom_toTopOf="@+id/pepperoni_btn"
        app:layout_constraintEnd_toStartOf="@+id/hmc_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheese_btn" />

    <Button
        android:id="@+id/hmc_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ham_n_cheese"
        app:layout_constraintBottom_toTopOf="@+id/margarita_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cheese_chicken_btn"
        app:layout_constraintTop_toBottomOf="@+id/fch_btn" />

    <Button
        android:id="@+id/pepperoni_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="97dp"
        android:text="@string/pepperoni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/margarita_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheese_chicken_btn" />

    <Button
        android:id="@+id/margarita_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="97dp"
        android:text="@string/margarita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pepperoni_btn"
        app:layout_constraintTop_toBottomOf="@+id/hmc_btn" />

    <Button
        android:id="@+id/fch_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="22dp"
        android:text="@string/four_cheese"
        app:layout_constraintBottom_toTopOf="@+id/hmc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cheese_btn"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>